Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33828

Transactional commit not supported by involved engine(s)

    XMLWordPrintable

Details

    Description

      connection node_2;
      connection node_1;
      SET AUTOCOMMIT=ON;
      SELECT @@autocommit;
      @@autocommit
      1
      SET LOCAL enforce_storage_engine=InnoDB;
      CREATE TABLE t1(id int not null primary key auto_increment, name varchar(64)) ENGINE=InnoDB;
      INSERT INTO t1(name) VALUES ('name1'),('name3'),('name6'),('name2');
      CREATE PROCEDURE sel_proc()
      BEGIN
      DECLARE CONTINUE HANDLER FOR SQLEXCEPTION BEGIN END;
      SELECT * FROM t1;
      END|
      CREATE PROCEDURE ins_proc()
      BEGIN
      DECLARE CONTINUE HANDLER FOR SQLEXCEPTION BEGIN END;
      INSERT INTO t1 VALUES ('name_proc');
      END|
      SET AUTOCOMMIT=OFF;
      SELECT @@autocommit;
      @@autocommit
      0
      START TRANSACTION;
      insert into t1(name) values('name10');
      select param_list, returns, db, type from mysql.proc where name='sel_proc';
      param_list	returns	db	type
      		test	PROCEDURE
      call ins_proc();
      COMMIT;
      galera.jan 'innodb'                [ fail ]
              Test ended at 2024-04-04 13:35:10
       
      CURRENT_TEST: galera.jan
      mysqltest: At line 37: query 'COMMIT' failed: 1180: Transactional commit not supported by involved engine(s)
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              janlindstrom Jan Lindström
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d
                  3d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.